# better-bbolt

./: .gitignore  Cargo.toml  TODO.md  rustfmt.toml
bbolt-boyer-moore-magiclen/: Cargo.toml
bbolt-boyer-moore-magiclen/benches/: full_text_search.rs
bbolt-boyer-moore-magiclen/src/: byte.rs  lib.rs  repeat_spec.rs
bbolt-boyer-moore-magiclen/tests/: character.rs  repeat_spec.rs  utf8.rs
bbolt-boyer-moore-magiclen/tests/data/: repeat_spec.ron
bbolt-engine/: Cargo.toml
bbolt-engine/src/: cursor.rs  lib.rs
bbolt-engine/src/backend/: closed.rs  file.rs  memory.rs  mmap.rs  mod.rs
bbolt-engine/src/common/: bitset.rs  bucket.rs  buffer.rs  ids.rs
bbolt-engine/src/io/: buffer_cache.rs  mod.rs  page_buffer.rs  read_buffer.rs
bbolt-engine/src/pages/: freelist.rs  meta.rs  node.rs
bbolt-index/: Cargo.toml
bbolt-index/src/: index.rs  lib.rs
bbolt-index/src/backend/: file.rs  memory.rs  mod.rs
bbolt-index/src/common/: alignment.rs  bitset.rs  buffer_pool.rs  ids.rs  io_pool.rs  mod.rs  page.rs  stack.rs
bbolt-index/src/pages/: meta.rs
bbolt-nub/: Cargo.toml  TODO.md
bbolt-nub/src/: lib.rs
bbolt-nub/src/api/: bucket.rs  bytes.rs  cursor.rs  db.rs  errors.rs  mod.rs  tx.rs
bbolt-nub/src/common/: bucket.rs  buffer_pool.rs  consts.rs  data_pool.rs  errors.rs  id.rs  mod.rs  page.rs  page_bytes.rs  vec_pool.rs
bbolt-nub/src/common/layout/: bucket.rs  meta.rs  mod.rs  node.rs  page.rs
bbolt-nub/src/components/: bucket.rs  bucket_path.rs  cursor.rs  db.rs  free_index.rs  mod.rs  tx.rs
bbolt-nub/src/components/backend/: memmap.rs  mod.rs
bbolt-nub/src/components/commit/: mod.rs
bbolt-nub/src/components/commit/phase2/: doc.rs  mod.rs
bbolt-nub/src/io/: disk_cache.rs  mod.rs  ops.rs  reader.rs
bbolt-nub/src/io/backends/: channel_store.rs  file.rs  memmap.rs  meta_reader.rs  mod.rs  p_file.rs  trait_playground.rs
bbolt-nub/src/io/bytes/: mod.rs  ref_bytes.rs  shared_bytes.rs  slice_bytes.rs
bbolt-nub/src/io/pages/: kv.rs  kvdata.rs  lazy.rs  lazy_page.rs  loaded.rs  mod.rs  ref_page.rs  shared_page.rs
bbolt-nub/src/io/pages/direct/: mod.rs  ops.rs
bbolt-nub/src/io/pages/lazy/: mod.rs  ops.rs  ref_slice.rs  tx_slice.rs
bbolt-nub/src/io/pages/types/: freelist.rs  meta.rs
bbolt-nub/src/io/pages/types/node/: branch.rs  cursor.rs  ext.rs  leaf.rs  mod.rs
bbolt-nub/src/io/pages/types/node/branch/: bbolt.rs  mod.rs
bbolt-nub/src/io/pages/types/node/leaf/: bbolt.rs  mod.rs
bbolt-nub/src/io/transmogrify/: direct.rs
bbolt-nub/src/pages/: bytes.rs  freelist.rs  kvdata.rs  meta.rs  mod.rs  node.rs  slice_index.rs  txpage.rs
bbolt-nub/src/pages/impls/: kvdata.rs  lazy_page.rs  mod.rs  ref_page.rs  shared_page.rs
bbolt-nub/src/pages/node/: branch.rs  leaf.rs  mod.rs  node.rs
bbolt-nub/src/tx_io/backends/: file.rs  memmap.rs  meta_reader.rs  mod.rs
bbolt-nub/src/tx_io/bytes/: ref_bytes.rs  shared_bytes.rs
bbolt-nub/src/tx_io/pages/: complete.rs  entire.rs  kv.rs  lazy.rs  loaded.rs  mod.rs  ref_page.rs
bbolt-nub/src/tx_io/pages/types/: freelist.rs  meta.rs  mod.rs
bbolt-nub/src/tx_io/pages/types/node/: branch.rs  leaf.rs  mod.rs
bbolt-nub/src/tx_io/transmogrify/: direct.rs  mod.rs
boyer-moore-magiclen/: Cargo.toml
boyer-moore-magiclen/benches/: normal_text_search.rs
boyer-moore-magiclen/benches/full_text_search_lib/: mod.rs
boyer-moore-magiclen/benches/normal_text_search_lib/: mod.rs
boyer-moore-magiclen/src/: byte.rs  character.rs  lib.rs  repeat_spec.rs
boyer-moore-magiclen/tests/: common.rs  repeat_spec.rs
boyer-moore-magiclen/tests/data/: repeat_spec.ron
src/: bucket.rs  freelist.rs  lib.rs  tx.rs
src/db/: mod.rs  options.rs
src/freelist/: freelist.rs  masks.rs  mod.rs  search.rs  simple.rs
