[workspace]
resolver = "2"
members = [
    "bbolt-engine",
    "bbolt-nub",
    "."
]
default-members = ["bbolt-engine", "bbolt-nub", "."]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[package]
name = "better-bbolt"
description = "A better Rust port Bolt database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
itertools.workspace = true
bumpalo.workspace = true
bon.workspace = true
size.workspace = true
rayon.workspace = true
parking_lot.workspace = true
lz4_flex.workspace = true
smallvec.workspace = true
bbolt-engine.workspace = true
bbolt-nub.workspace = true
futures = { version = "0.3.31", features = ["thread-pool"] }

[workspace.dependencies]
# going away!
aligners = { version = "0.0.10", default-features = false }
# Until the aligners miri fix is in crates.io depend on the git main branch
# Swap 0.0.10 for the git version to run the miri test
#aligners = {git = "https://github.com/V0ldek/aligners.git", default-features = false }

# Data Structures
parking_lot = "0.12.3"
bytemuck = { version = "1.22", features = ["derive"] }
once_cell = "1.21"
size = "0.5.0"
smallvec = { version = "1.13.2", features = ["const_generics"] }
triomphe = "0.1.14"
dashmap = "6.1.0"
hashbrown = "0.15.2"
moka = { version = "0.12", features = ["sync"] }
bumpalo = "3.17.0"
bytes = "1.10.1"

# Operating System / IO Support
page_size = "0.6.0"
memmap2 = "0.9.5"
fs4 = { version = "0.13", features = ["sync", "fs-err3"] }
bitflags = "2.9.0"

# Algorithms
fnv_rs = "0.4.3"
lz4_flex = "0.11.3"

# Idiomatics
itertools = "0.14.0"
delegate = "0.13"
getset = "0.1.5"

# Unsafe handling
uninit = "0.6.2"

# Multi-threading
rayon = "1.10.0"
crossbeam-channel = "0.5"

# CLI
bon = { version = "3.5", features = ["implied-bounds"] }

# Logging/Error
tracing = "0.1.41"
error-stack = "0.5.0"
thiserror = "2"
fs-err = "3.1.0"

# Testing
fake = { version = "4.3.0", features = ["derive"] }

# bbolt internal libraries
bbolt-engine = {path = "bbolt-engine" }
bbolt-nub = {path = "bbolt-nub" }
