[workspace]
resolver = "2"
members = [
    "bbolt-engine",
    "bbolt-nub",
    "."
]
default-members = ["bbolt-engine", "bbolt-nub", "."]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[package]
name = "better-bbolt"
description = "A better Rust port Bolt database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
itertools.workspace = true
bon.workspace = true
size.workspace = true
rayon.workspace = true
parking_lot.workspace = true
lz4_flex.workspace = true
bbolt-engine.workspace = true
bbolt-nub.workspace = true

[workspace.dependencies]
# Data Structures
parking_lot = "0.12.3"
bytemuck = { version = "1.23.0", features = ["derive"] }
once_cell = "1.21.3"
size = "0.5.0"
triomphe = "0.1.14"
hashbrown = "0.15.3"
moka = { version = "0.12.10", features = ["sync"] }
bytes = "1.10.1"
rangemap = "1.5.1"

# Operating System / IO Support
page_size = "0.6.0"
memmap2 = "0.9.5"
bitflags = "2.9.0"
io-uring = "0.7.6"


# Algorithms
fnv_rs = "0.4.3"
lz4_flex = "0.11.3"

# Idiomatics
itertools = "0.14.0"
delegate = "0.13.3"
getset = "0.1.5"
zeroize = "1.8.1"

# Unsafe handling
uninit = "0.6.2"

# Multi-threading
rayon = "1.10.0"
crossbeam-channel = "0.5.15"

# CLI
bon = { version = "3.6.3", features = ["implied-bounds"] }

# Logging/Error
error-stack = "0.5.0"
thiserror = "2.0.12"

# Testing
fake = { version = "4.3.0", features = ["derive"] }

# bbolt internal libraries
bbolt-engine = {path = "bbolt-engine" }
bbolt-nub = {path = "bbolt-nub" }

[profile.release]
debug = true