[package]
name = "bbolt-nub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "The Rust port Bolt database. Core functionality and types"

[features]
default = []
mt_search = []
io_uring = ["dep:io-uring"]

[dependencies]
parking_lot.workspace = true
memmap2.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
triomphe.workspace = true
uninit.workspace = true
bitflags.workspace = true
page_size.workspace = true
itertools.workspace = true
once_cell.workspace = true
size.workspace = true
delegate.workspace = true
fnv_rs.workspace = true
crossbeam-channel.workspace = true
fake.workspace = true
hashbrown.workspace = true
moka.workspace = true
getset.workspace = true
error-stack.workspace = true
rayon = {workspace = true}
bytes.workspace = true
rangemap.workspace = true
bon.workspace = true
zeroize.workspace = true
io-uring = {workspace = true, optional = true}
